--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
-  command = "python app.py"  # Specify the command to run your Flask app
-  publish = "."  # Specify the directory to publish (root directory)
+  command = "python -m pip install -r requirements.txt && python app.py"
+  publish = "/"
+  functions = "functions/"
 
 [build.environment]
-  PYTHON_VERSION = "3.12"  # Specify the desired Python version
-  PIP_VERSION = "latest"  # Specify the desired pip version
+  PYTHON_VERSION = "3.9"
+  PIP_VERSION = "21.3.1"
