Added Self-Trained Classifications

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "python -m venv venv && . venv/bin/activate && pip install -r requirements.txt && python app.py"
+  command = "python3.8 -m venv venv && source venv/bin/activate && pip install -r requirements.txt && python app.py"
   publish = "/"
   functions = "functions/"
 
