Added Self-Trained Classifications

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,4 @@
 [build]
-  command = "python3.8 -m venv .venv && source .venv/bin/activate && pip install -r requirements.txt && python app.py"
+  command = "python -m venv .venv && source .venv/bin/activate && pip install -r requirements.txt && python app.py"
   publish = "/"
   functions = "functions/"
-
-[build.environment]
-  PYTHON_VERSION = "3.8"
-  PIP_VERSION = "latest"
