--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ scikit-learn = "*"
 pytesseract = "*"
 speechrecognition = "*"
 pyaudio = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.8"
