--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,9 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#3498db",
-  "author": "Son Nguyen Hoang",
+  "author": "Son Nguyen",
   "description": "AI & ML Multipurpose Classifiers that can classify images, texts, and sounds",
+  "license": "MIT",
   "icons": [
     {
       "src": "assets/image-192x192.webp",
