--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
   command = "pip install -r requirements.txt && python app.py"
-  publish = "/"  # Or "./" if Netlify requires a relative path
+  publish = "/"
   functions = "functions/"
