Update: Refactored Source Code

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "text",
     "images",
     "audio",
-    "data"
-
+    "data",
+    "machine learning",
+    "artificial intelligence"
   ],
   "author": "Son Nguyen",
   "license": "MIT",
