Update: Refactored Source Code

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "audio",
     "data",
     "machine learning",
-    "artificial intelligence"
+    "artificial intelligence",
+    "classification"
   ],
   "author": "Son Nguyen",
   "license": "MIT",
